--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -1,6 +1,7 @@
 @mixin styleHeaderNavBar {
     position: sticky;
     top: 0;
+    z-index: 2;
     &-container{
         background-color: black;
         z-index: 2;
